[package]
name = "qlang"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
bincode = "1.3.3"
chrono = "0.4.26"
clone_box = "0.1.2"
erased-serde = "0.3.25"
fxhash = "0.2.1"
libloading = "0.8.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
