[package]
name = "qlang"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
async-recursion = "1.0.4"
async-std = "1.12.0"
bincode = "1.3.3"
chrono = "0.4.26"
clone_box = "0.1.2"
ctrlc = "3.4.0"
erased-serde = "0.3.25"
futures = "0.3.28"
fxhash = "0.2.1"
lazy_static = "1.4.0"
libloading = "0.8.0"
nix = "0.26.2"
num-traits = "0.2.15"
parking_lot = "0.12.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
winapi = "0.3.9"
