[package]
name = "qlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
async-std = "1.12.0"
bincode = "1.3.3"
clone_box = "0.1.2"
erased-serde = "0.3.25"
fxhash = "0.2.1"
lazy_static = "1.4.0"
libloading = "0.8.0"
once_cell = "1.18.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
